--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Sqlite"
         tools:targetApi="31">
         <activity
+            android:name=".ParqueActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".MorroActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".SenaActivity2"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
